Fix Material Settings Help and Settings redirect

"About in Settings" shouldn't affect loading of MD Settings or
prevent Help from loading at all.

On Chrome OS, chrome://settings wasn't redirecting; on other
platforms, chrome://help wasn't loading.

BUG=621390,621344

Review-Url: https://codereview.chromium.org/2088473002
Cr-Commit-Position: refs/heads/master@{#401092}

Former-commit-id: 8e75cccd2ff5224bdd82662d47af49a26e247d39