chrome/browser/browser_about_handler.cc
@@ -95,24 +95,24 @@ bool WillHandleBrowserAboutURL(GURL* url,
 #endif
   // Redirect chrome://settings, unless MD settings is enabled.
   } else if (host == chrome::kChromeUISettingsHost) {
-    if (::switches::AboutInSettingsEnabled()) {
-      host = chrome::kChromeUISettingsFrameHost;
-    } else if (base::FeatureList::IsEnabled(
-                   features::kMaterialDesignSettingsFeature)) {
+    if (base::FeatureList::IsEnabled(
+            features::kMaterialDesignSettingsFeature)) {
       return true;  // Prevent further rewriting - this is a valid URL.
+    } else if (::switches::AboutInSettingsEnabled()) {
+      host = chrome::kChromeUISettingsFrameHost;
     } else {
       host = chrome::kChromeUIUberHost;
       path = chrome::kChromeUISettingsHost + url->path();
     }
   // Redirect chrome://help, unless MD settings is enabled.
   } else if (host == chrome::kChromeUIHelpHost) {
-    if (::switches::AboutInSettingsEnabled()) {
+    if (base::FeatureList::IsEnabled(
+            features::kMaterialDesignSettingsFeature)) {
+      return true;  // Prevent further rewriting - this is a valid URL.
+    } else if (::switches::AboutInSettingsEnabled()) {
       host = chrome::kChromeUISettingsFrameHost;
       if (url->path().empty() || url->path() == "/")
         path = chrome::kChromeUIHelpHost;
-    } else if (base::FeatureList::IsEnabled(
-                   features::kMaterialDesignSettingsFeature)) {
-      return true;  // Prevent further rewriting - this is a valid URL.
     } else {
       host = chrome::kChromeUIUberHost;
       path = chrome::kChromeUIHelpHost + url->path();
